--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,2 +1,8 @@
-// For information on how to create your own theme, please see:
-// http://ionicframework.com/docs/theming/
+:root {
+    --ion-color-secondary: #7001ad;
+    --ion-color-secondary-rgb: 112, 1, 173;
+    --ion-color-secondary-contrast: #ffffff;
+    --ion-color-secondary-contrast-rgb: 255, 255, 255;
+    --ion-color-secondary-shade: #630198;
+    --ion-color-secondary-tint: #7e1ab5;
+  }
