--- a/src/app/actor/actor.page.html
+++ b/src/app/actor/actor.page.html
@@ -11,6 +11,11 @@
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Teatro - Ator (titulo 2)</ion-title>
+      <!-- <ion-select formControlName="platforms" label="Plataformas" label-placement="floating" multiple="true">
+        @for(actor of actors; track platform) {
+          <ion-select-option [value]="platform">{{platform.name}}</ion-select-option>
+        }
+      </ion-select> -->
     </ion-toolbar>
   </ion-header>
 </ion-content>
