--- a/src/app/theater/theater-form/theater-form.component.html
+++ b/src/app/theater/theater-form/theater-form.component.html
@@ -8,5 +8,35 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-list>
+    <ion-item>
+      <ion-input labelPlacement="floating" label="Nome: " type="text"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-input labelPlacement="floating" label="Logo (URL)" type="url"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-input labelPlacement="floating" label="Telefone" [maskito]="phoneMask" [maskitoElement]="maskitoElement"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-input labelPlacement="floating" label="Email" type="text"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-input labelPlacement="floating" label="Endereço" type="text"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-input labelPlacement="floating" label="Fundação" [maskito]="dateMask" [maskitoElement]="maskitoElement" />
+    </ion-item>
+    <ion-item>
+      <ion-input labelPlacement="floating" label="Capacidade" type="number" />
+    </ion-item>
+    <ion-item>
+      <ion-input labelPlacement="floating" label="Website" type="text" />
+    </ion-item>
+  </ion-list>
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button>
+      <ion-icon name="checkmark"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
