Cores mais interessantes usadas como paleta principal

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,8 +1,8 @@
 :root {
-    --ion-color-secondary: #7001ad;
-    --ion-color-secondary-rgb: 112, 1, 173;
-    --ion-color-secondary-contrast: #ffffff;
+    --ion-color-secondary: ##47606A;
+    --ion-color-secondary-rgb: 168, 143, 172;
+    --ion-color-secondary-contrast: ##073A5B;
     --ion-color-secondary-contrast-rgb: 255, 255, 255;
-    --ion-color-secondary-shade: #630198;
-    --ion-color-secondary-tint: #7e1ab5;
-  }
+    --ion-color-secondary-shade: ##0A2472;
+    --ion-color-secondary-tint: ##001C55;
+}
