Cadastro de ator e teatro, validators, forms e services

--- a/src/app/play/play-form/play-form.component.html
+++ b/src/app/play/play-form/play-form.component.html
@@ -20,7 +20,7 @@
         <ion-input formControlName="gender" labelPlacement="floating" label="Gênero" type="text"></ion-input>
       </ion-item>      
       <ion-item>
-        <ion-input formControlName="adress" labelPlacement="floating" label="Endereço" type="text"></ion-input>
+        <ion-input formControlName="address" labelPlacement="floating" label="Endereço" type="text"></ion-input>
       </ion-item>      
       <ion-item>
         <ion-input formControlName="capacity" labelPlacement="floating" label="Capacidade" type="number"></ion-input>
