fix: email error message

--- a/src/app/actor/actor-form/actor-form.component.html
+++ b/src/app/actor/actor-form/actor-form.component.html
@@ -64,7 +64,7 @@
             O campo é obrigatório
           }
           @if(hasError('email', 'invalidEmail')) {
-            O campo de data deve ser uma data válida
+            O campo de email deve conter um email válido
           }
         </p>
       </ion-item>
