Adicionado CRUD ao componente Play(Peça)

--- a/src/app/actor/actor-form/actor-form.component.html
+++ b/src/app/actor/actor-form/actor-form.component.html
@@ -11,31 +11,73 @@
   <form [formGroup]="actorForm">
     <ion-list>
       <ion-item>
-        <ion-input formControlName="name" labelPlacement="floating" label="Nome: " type="text"></ion-input>
+        <ion-input formControlName="name" labelPlacement="floating" label="Nome *" type="text"></ion-input>
+        <p>
+          @if(hasError('name', 'required')) {
+            O campo é obrigatório
+          }
+          @if(hasError('name', 'minlength')) {
+            O campo deve ter no mínimo 4 caracteres
+          }
+          @if(hasError('name', 'maxlength')) {
+            O campo deve ter no máximo 100 caracteres
+          }
+        </p>
       </ion-item>
       <ion-item>
-        <ion-input formControlName="image" labelPlacement="floating" label="Logo (URL)" type="url"></ion-input>
+        <ion-input formControlName="image" labelPlacement="floating" label="Logo (URL) *" type="url"></ion-input>
+        <p>
+          @if(hasError('image', 'required')) {
+            O campo é obrigatório
+          }
+          @if(hasError('image', 'invalidUrl')) {
+            O campo de logo deve ser uma URL válida
+          }
+        </p>
       </ion-item>
       <ion-item>
-        <ion-input formControlName="phone" labelPlacement="floating" label="Telefone" [maskito]="phoneMask" [maskitoElement]="maskitoElement" />
+        <ion-input formControlName="phone" labelPlacement="floating" label="Telefone *" [maskito]="phoneMask" [maskitoElement]="maskitoElement" />
+        <p>
+          @if(hasError('phone', 'required')) {
+            O campo é obrigatório
+          }
+          @if(hasError('phone', 'invalidPhone')) {
+            O campo de telefone deve ser um telefone válido
+          }
+        </p>
       </ion-item>
       <ion-item>
-        <ion-input formControlName="birthDate" labelPlacement="floating" label="Aniversário" [maskito]="dateMask"
-          [maskitoElement]="maskitoElement" />
+        <ion-input formControlName="birthDate" labelPlacement="floating" label="Aniversário *" [maskito]="dateMask" [maskitoElement]="maskitoElement" />
+        <p>
+          @if(hasError('birthDate', 'required')) {
+            O campo é obrigatório
+          }
+          @if(hasError('birthDate', 'invalidDate')) {
+            O campo de data deve ser uma data válida
+          }
+        </p>
       </ion-item>
       <ion-item>
         <ion-input formControlName="email" labelPlacement="floating" label="Email" type="text" />
+        <p>
+          @if(hasError('email', 'required')) {
+            O campo é obrigatório
+          }
+          @if(hasError('email', 'invalidEmail')) {
+            O campo de email deve conter um email válido
+          }
+        </p>
       </ion-item>
       <ion-item>
         <ion-input formControlName="gender" labelPlacement="floating" label="Genero" type="text" />
       </ion-item>
       <ion-item>
-        <ion-input formControlName="biography" labelPlacement="floating" label="Biografia" type="text" />
+        <ion-textarea formControlName="biography" labelPlacement="floating" label="Biografia" type="text" />
       </ion-item>
     </ion-list>
   </form>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button [disabled]="actorForm.invalid">
+    <ion-fab-button [disabled]="actorForm.invalid" (click)="save()">
       <ion-icon name="checkmark"></ion-icon>
     </ion-fab-button>
   </ion-fab>
