--- a/src/app/play/play-form/play-form.component.html
+++ b/src/app/play/play-form/play-form.component.html
@@ -12,7 +12,6 @@
     <ion-list>
       <ion-item>
         <ion-input formControlName="name" labelPlacement="floating" label="Nome: " type="text"></ion-input>
-
           @if(hasError('name', 'required')) {
             O campo é obrigatório
           }
@@ -26,10 +25,10 @@
       <ion-item>
         <ion-input formControlName="synopsis" labelPlacement="floating" label="Sinopse: " type="text"></ion-input>
         <p>          
-          @if(hasError('name', 'minlength')) {
+          @if(hasError('synopsis', 'minlength')) {
             O campo deve ter no mínimo 100 caracteres
           }
-          @if(hasError('name', 'maxlength')) {
+          @if(hasError('synopsis', 'maxlength')) {
             O campo deve ter no máximo 255 caracteres
           }
         </p>
@@ -37,10 +36,10 @@
       <ion-item>
         <ion-input formControlName="gender" labelPlacement="floating" label="Gênero" type="text"></ion-input>
         <p>          
-          @if(hasError('name', 'minlength')) {
+          @if(hasError('gender', 'minlength')) {
             O campo deve ter no mínimo 4 caracteres
           }
-          @if(hasError('name', 'maxlength')) {
+          @if(hasError('gender', 'maxlength')) {
             O campo deve ter no máximo 20 caracteres
           }
         </p>
