--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,8 +1,8 @@
 :root {
-    --ion-color-secondary: ##47606A;
+    --ion-color-secondary: #47606A;
     --ion-color-secondary-rgb: 168, 143, 172;
-    --ion-color-secondary-contrast: ##073A5B;
+    --ion-color-secondary-contrast: white;
     --ion-color-secondary-contrast-rgb: 255, 255, 255;
-    --ion-color-secondary-shade: ##0A2472;
-    --ion-color-secondary-tint: ##001C55;
+    --ion-color-secondary-shade: #0A2472;
+    --ion-color-secondary-tint: #001C55;
 }
