--- a/src/app/play/play-form/play-form.component.html
+++ b/src/app/play/play-form/play-form.component.html
@@ -12,7 +12,6 @@
     <ion-list>
       <ion-item>
         <ion-input formControlName="name" labelPlacement="floating" label="Nome: " type="text"></ion-input>
-
           @if(hasError('name', 'required')) {
             O campo é obrigatório
           }
@@ -26,21 +25,32 @@
       <ion-item>
         <ion-input formControlName="synopsis" labelPlacement="floating" label="Sinopse: " type="text"></ion-input>
         <p>          
-          @if(hasError('name', 'minlength')) {
+          @if(hasError('synopsis', 'minlength')) {
             O campo deve ter no mínimo 100 caracteres
           }
-          @if(hasError('name', 'maxlength')) {
+          @if(hasError('synopsis', 'maxlength')) {
             O campo deve ter no máximo 255 caracteres
+          }
+        </p>
+      </ion-item>
+      <ion-item>
+        <ion-input formControlName="image" labelPlacement="floating" label="Logo (URL) *" type="url"></ion-input>
+        <p>
+          @if(hasError('image', 'required')) {
+            O campo é obrigatório
+          }
+          @if(hasError('image', 'invalidUrl')) {
+            O campo de logo deve ser uma URL válida
           }
         </p>
       </ion-item>
       <ion-item>
         <ion-input formControlName="gender" labelPlacement="floating" label="Gênero" type="text"></ion-input>
         <p>          
-          @if(hasError('name', 'minlength')) {
+          @if(hasError('gender', 'minlength')) {
             O campo deve ter no mínimo 4 caracteres
           }
-          @if(hasError('name', 'maxlength')) {
+          @if(hasError('gender', 'maxlength')) {
             O campo deve ter no máximo 20 caracteres
           }
         </p>
