--- a/src/app/play/play.page.html
+++ b/src/app/play/play.page.html
@@ -3,46 +3,76 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Peça - Peça (titulo 1)</ion-title>
+    <ion-title>Peças - Peças</ion-title>
   </ion-toolbar>
 </ion-header>
-
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Peça - Peça (titulo 2)</ion-title>
+      <ion-title size="large">Peças - Peças</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <ion-list>
     <ion-list-header>
-      <ion-label>Lista de Peça</ion-label>
+      <ion-label class="titulo">Lista de Peças</ion-label>
     </ion-list-header>
-    @for(play of playList; track play.name) {
-    <ion-item>
-      <ion-thumbnail slot="start">
-        <!-- <img [src]="play.image" /> -->
-      </ion-thumbnail>
-      <ion-text class="play-info">
-        <h2>{{ play.id }} - {{ play.name }}</h2>        
-        <h4><strong>Endereço: </strong> {{ play.address }} </h4>        
-        <h5><strong>Capacidade: </strong> {{play.capacity }}</h5>
-        <h5><strong>Sinopse:</strong> {{play.synopsis }}</h5>
-        <h5><strong>Gênero:</strong> {{play.gender }}</h5>
-        <ion-button size="small" [routerLink]="['edit', play.id]">
-          <ion-icon name="create" slot="start"></ion-icon>
-          Editar
-        </ion-button>
-        <ion-button size="small" (click)="remove(play)">
-          <ion-icon name="trash" slot="end"></ion-icon>
-          Excluir
-        </ion-button>
-      </ion-text>
-    </ion-item>
-    }
-    @empty {
-    <ion-item>Lista de Peças vazia, cadastre uma nova Peça!</ion-item>
-    }
+    <div class="card-container">
+      @for(play of playList; track play.name) {
+      <div class="card">
+        <div class="foto-nome">
+          <ion-thumbnail slot="start">
+            @if(play.image) {
+            <img [src]="play.image" />
+            } @else {
+            <img src="../core/images/default-avatar.png" />
+            }
+          </ion-thumbnail>
+          <div class="nome-idade">
+            <h2>{{ play.name }}</h2>
+            <h3>{{ play.gender }} </h3>
+          </div>
+        </div>
+        <ion-text class="play-info">
+          <table>
+            <tbody>
+              <tr>
+                <td class="label">Endereço</td>
+                <td class="value">{{ play.address }}</td>
+              </tr>
+              <tr>
+                <td class="label">Capacidade</td>
+                <td class="value">{{ play.capacity }}</td>
+              </tr>   
+              <tr>
+                <td class="label">Sinopse</td>
+                <td class="value">{{ play.synopsis }}</td>
+              </tr>           
+            </tbody>
+          </table>
+          <div class="button-container">
+            <ion-button size="small" [routerLink]="['edit', play.id]">
+              <ion-icon name="create" slot="start"></ion-icon>
+              Editar
+            </ion-button>
+            <ion-button size="small" (click)="remove(play)">
+              <ion-icon name="trash" slot="end"></ion-icon>
+              Excluir
+            </ion-button>
+          </div>
+        </ion-text>
+      </div>
+      }
+      @empty {
+      <div class="lista-vazia">
+        <ion-icon name="information-circle-outline"></ion-icon>
+        <ion-item>Lista de peças vazia, cadastre uma nova Peça!</ion-item>
+      </div>
+      }
+      <div class="add-item-container" [routerLink]="['new']">
+        <img class="add-item-image" src="assets/icon/add-gray-icon.png" alt="adicionar">
+      </div>
+    </div>
   </ion-list>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button [routerLink]="['new']">
