--- a/src/app/actor/actor.page.scss
+++ b/src/app/actor/actor.page.scss
@@ -1,7 +1,7 @@
 .titulo {
   font-size: 1.8rem;
   font-weight: 700;
-  color: white;
+  color: #3B82F6;
   text-align: center;
   padding: 12px 0;
   text-transform: uppercase;
@@ -34,9 +34,7 @@ ion-toolbar {
   max-height: 500px;
   overflow: hidden;
   background-color: #001C55;
-
 }
-
 
 ion-thumbnail {
   width: 64px;
@@ -63,7 +61,6 @@ ion-thumbnail img {
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
   background-color: #0A2472;
-
   padding: 10px;
 }
 
