--- a/src/app/director/director.page.html
+++ b/src/app/director/director.page.html
@@ -3,13 +3,13 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Diretores - Diretores</ion-title>
+    <ion-title>Diretores</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Diretores - Diretores</ion-title>
+      <ion-title size="large">Diretores</ion-title>
     </ion-toolbar>
   </ion-header>
 
