--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Theater</ion-title>
+    <ion-title>Teatro</ion-title>
   </ion-toolbar>
 </ion-header>
 
