--- a/src/app/play/play.page.scss
+++ b/src/app/play/play.page.scss
@@ -1,7 +1,7 @@
 .titulo {
   font-size: 1.8rem;
   font-weight: 700;
-  color: white;
+  color: #3B82F6;
   text-align: center;
   padding: 12px 0;
   text-transform: uppercase;
